--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ iframe {
 </head>
 <body>
     <center>
-        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FPlSiE1Hva4r2Ia7aKAECoS%2Fportfolioyinka%3Fpage-id%3D0%253A1%26scaling%3Dscale-down%26node-id%3D37%253A26" allowfullscreen></iframe>
+        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FPlSiE1Hva4r2Ia7aKAECoS%2Fportfolioyinka%3Fpage-id%3D0%253A1%26node-id%3D145%253A13827%26scaling%3Dscale-down" allowfullscreen></iframe>
     </center>
     
 </body>
